--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,11 @@
             "email": "jomcfred@gmail.com"
         }
     ],
-    "require": {
-
-    },
+    "require": {},
+	"require-dev": {
+		"phpunit/phpunit": "4.0.*",
+        "mockery/mockery": "0.9.*@dev"
+	},
     "autoload": {
         "psr-4": {
             "Pickupman\\Petfinder\\": "src"
